273 - 303 pages are formated

--- a/tex-for-print/jss-001-281.tex
+++ b/tex-for-print/jss-001-281.tex
@@ -28461,23 +28461,19 @@ jiVvanumxkitxBaRveVtf sadayxH cidAnaMdaparxkAshiniV ||
 \newmeaning{\ni{liMgeV aikayxM liMgeYkayxM, jiVvasayx liMgeYkayxM - jiVva\-liMgeYkayxM}}
 \end{entry}
 
-%raghu, page 273
-
 \begin{entry}
 \word{jiVvavaMcaka}
 \meaning{\arthanonum{pArxNakekx hedaruvavanu; jiVvagaLaLx:}
 \ullekha{Bavakekx huTuTxva\-nalalx, saMdeVhasUtakiyalalx... kAyavaMcakanalalx, jiVvavaMcaka\-nalalx... (savasaM. 1; basava. 875-228); shivagaNa\-dorxVhada vacanavadu kivige silukida mAtarxdali ...sAyalA{\ra}de jiVva\-vaMcaka kAyadhArige koVpige ...shirxVyumAdhaRshariVri mAyika mAyikaM mecucxvane (basapu. 60-15); suKaduHKagaLu deVhakakxlalxde jiVvanigilalxveMdu heVLuvaMtha veVdAMti (basaTiV. {\rm\em{II}}, 300-942 TiVku).}}
-\vskip 2pt
+\vskip 5pt
 \newmeaning{\ni{jiVvasayx vaMcakaH - jiVvavaMcakaH}}
 \end{entry}
-
-\vskip 2pt
 
 \begin{entry}
 \word{jiVvashudadhx}
 \meaning{\arthanonum{tirxvidha diVkeSxgaLiMda parishudadhxvAda jiVvAtamx; sAdhaka:}
 \ullekha{Bavitanakekx heVsi BakatxnAdaheneMdare... Atana kAyashudadhxna mADu\-vudu, jiVvashudadhxna mADuvudu. (savasaM. 3; cenanxba. 1429-522); I maMtarxdiMda Atana jiVvashudadhxvaM mADu\-vudu (gaNaBA. 186-26).}}
-\vskip 2pt
+\vskip 5pt
 \newmeaning{\ni{jiVvashacx asw shudadhxshacx jiVvashudadhxH; shudadhxH jiVvaH yasayx saH - jiVvashudadhxH}}
 \end{entry}
 %%%pAdoVdakava koMDeveMba aNaNxgaLirA, niVvu keVLiro... kAyashudadhx, karaNashudadhx, jiVvashudadhx, BAvashudadhx.. (savasaM. 10; cenanxyayx. 855-502); inunx liMgadhAraNasathxlavadeMteMdaDe... dashavAyu shudadhx, aSaTx tanushudadhx, jiVvashudadhx, AtamxshudadhxvaM mADi.. (savasaM. 13; bAlasaM. 330-135); 
@@ -28497,20 +28493,16 @@ jiVvanumxkitxBaRveVtf sadayxH cidAnaMdaparxkAshiniV ||
 %\newmeaning{\ni{jiVvashudidhxH, jiVvasayx shudidhxH-jiVvashudidhxH}}
 %\end{entry}
 
-\vskip 2pt
-
 \begin{entry}
 \word{jiVvashUnayx}
-\meaning{\arthanonum{jiVvAtamxnu tAnu parashivaniMda parxteyxVkaveMdu tiLiyade,
+\meaning{\arthanonum{jiVvAtamxnu tAnu parashivaniMda parxteyxVka\-veMdu tiLiyade,
  parashivanu tananx oLahoraganenxlalx parxveVshisidAdxne eMba
  rahasayx (BeVda)vanunx tiLidare Aga avanu jiVvanAgidadxrU tananx
  jiVvatavxvanunx kaLedukoMDirutAtxne. ideV jiVvashUnayx, jiVvanumxkatx sithxti:}
 \ullekha{kAyashUnayx, jiVvashUnayx, pArxNa shUnayxveMdeMbaru, adeMtayayx ? (savasaM. 8; meremiM. 1322-457).}}
-\vskip 2pt
+\vskip 5pt
 \newmeaning{\ni{jiVveVna shUnayxM - jiVvashUnayxM}}
 \end{entry}
-
-\vskip 2pt
 
 \begin{entry}
 \word{jiVvasaMhAri}
@@ -28521,18 +28513,16 @@ jiVvanumxkitxBaRveVtf sadayxH cidAnaMdaparxkAshiniV ||
  jiVvatavx matutx adakekx saMbaMdhisida elalx upAdhigaLu
  ilalxvAgutatxve. paramAtamxna savaRtarx asitxtavxda aMgiVkAra:}
 \ullekha{AyataveMbudu BaMga, sAvxyataveMbudu Bava, Ayata\-variye, sAvxyatavariye, BAvadalilx varxtageTuTxdAgi. A BAvadalilx jiVvasaMhAri, kUDalasaMgamadeVva savaRnivAsiyAgi (savasaM. 1; basava. 946-250).}}
-\vskip 3pt
+\vskip 5pt
 \newmeaning{\ni{jiVvasayx saMhAreV shiVlaM asitx asimxnf iti - jiVvasaMhAriV}}
 \end{entry}
-
-\vskip 2pt
 
 \begin{entry}
 \word{jiVvasamAdhi}
 \src{va}
 \meaning{\arthanonum{pArxNavanunx barxhamxraMdharxkekxVrisi parabarxhamxdalilx aikayxgoLisuvudu:}
 \ullekha{nAru beVrina kuTila kapaTada yoVga\-valilxdu nililx BoV. kAyasamAdhi karaNasamAdhi yoVgavalilxdu nililx BoV. jiVvasamAdhiyeMbudalalx, nijasahajasamAdhi guheV\-shavxrA! (savasaM. 2; alalxma. 640-172).}}
-\vskip 4pt
+\vskip 5pt
 \newmeaning{\ni{jiVvasayx samAdhiH - jiVvasamAdhiH}}
 \end{entry}
 
@@ -28550,26 +28540,27 @@ jiVvanumxkitxBaRveVtf sadayxH cidAnaMdaparxkAshiniV ||
 
 \begin{entry}
 \word{jiVvAtamx}
-\meaning{\artha{AtamxtarxyagaLAda jiVvAtamx, aMtarAtamx matutx paramAtamx eMbuvugaLalilx oMdu parxBeVda; aMga matutx liMgavanunx beVrebeVreyeMdu tiLidiruvavanu:}}
+\meaning{\artha{AtamxtarxyagaLAda jiVvAtamx, aMtarAtamx matutx \hbox{paramAtamx} eMbuvugaLalilx oMdu parxBeVda; aMga matutx liMgavanunx beVrebeVreyeMdu tiLidiruvavanu:}}
 \medskip
 \begin{shl}
 jiVvAtAmx malapAshakamaRnAmakapAshatarxya badadhxH |\\[1pt]
 AtAmxnoV bahavaH saMti cidUrxpA maladUSitAH |\\[1pt]
-mAyAkamaRmaloVpeVtA kalAdayxvanigoVcareV ||
+mAyAkamaRmaloVpeVtA kalAdayxvanigoVcareV ||\\[-2pt]
 \end{shl}
 \smallskip
 \pauthor{Agama ??-??-??}
+\smallskip
 \newmeaning{\ullekha{jiVvAtamx aMtarAtamxna sudidxya besagoMbaDe heVLihe keVLi BoV. husiye saMkaleyAgidadxlilx kAdukoMDidadxnobabx, kathe kanasa mADi heVLutitxdadxnobabx (savasaM. 1; basava. 927-244); bahiraMgAvasethxyalilxruva jiVvAtamxnu tAmasaguNadiMda kUDi jiVvAtamx aMtarAtamx paramAtamxreMdAtamxtarxyaMgaLavaralilx tapAtxyaH piMDadaMte deVhAdigaLoDetana saMbaMdhadiM sakala saMsAra vayxvahAramuLALxtaneV jiVvAtamxnu (viveVka. 25); aMga beVre liMga beVreMdu liMgAMgaveraDakUkx BinanxviTuTx koMDArAdhisu\-vaMtha sidAdhxMtiyu (basaTiV. {\rm\em{II}}, 282-928 TiVku).}}
 \vskip 2pt
 \newmeaning{\artha{jiVva, aMga eMdu kareyalAguva sAdhaka:}}
 \smallskip
 \begin{shl}
-aMgarUpoV hi jiVvAtAmx BavaBAvaniyaMtirxtaH |
+aMgarUpoV hi jiVvAtAmx BavaBAvaniyaMtirxtaH |\\[-2pt]
 \end{shl}
 \medskip
 \pauthor{(liM.dhA.caM., pu. 174)}
 \smallskip
-\vskip 2pt
+\vskip 3pt
 \newmeaning{\artha{jaMgamaliMgasathxladalilxruva olavuliMgada mUru sathxla\-gaLalilx oMdu; jiVvaBAvavanunx niVgikoMDu, deVhaguNavanunx maretu parxNavadhAyxnadalilx niratanAda mahAjAcnxniyalilx para\-shivanu nelesuvaneMbudanunx nirUpisuva sathxla; liMgavu pArxNaliMgiyalilx jiVvaBAvavanunx toDeduhAki samayxgfjAcnxnavanunx aLavaDisuva sathxla:}
 \ullekha{olavuliMgatirxvidha: jiVvAtamx, aMtarAtamx, para\-mAtamx (savasaM. 3; cenanxba. 849-255); A parxNavadoLf jAni tanuguNavanaMtu sUsada mahAjAcnxniyoLu shivanipaRniV sathxlaM jiVvAtamxneY (viVsheYpu. 8-126-34).}
 \artha{Atamxna vayxvahAragaLa vayxtAyxsadiMdAguva jiVvAtamx, aMtarAtamx, paramAtamx, nimaRlAtamx, shudAdhxtamx, jAcnxnAtamx, mahAtamx matutx BUtAtamx eMba eMTu parxkAragaLalilx oMdu:}
@@ -28578,7 +28569,7 @@ aMgarUpoV hi jiVvAtAmx BavaBAvaniyaMtirxtaH |
 \ullekha{Atamxna vikAsavU adaraMteyeV hecucxtatx hoVgutatxde. vikAsa hoMdida hAge Atamxnu anukarxma\-vAgi jiVvAtamx, aMtarAtamx, paramAtamx, nimaRlAtamx, shudAdhxtamx, jAcnxnAtamx eMdu heVLalapxDutAtxne matutx kaDeya mUru Atamxna sithxti\-gaLu mahAtamx, divAyxtamx matutx cinamxyAtamx eMdu heVLalapxDutatxve (shivAkoV. 25-38).}
 \artha{mUvatAtxru bageya tatatxvXgaLalilx oMdu:}
 \ullekha{CatitxVsatatatxvXdoLu rAjisututxviRyoLagaNuvigaNuvA mahatitxgemahatitxvaRrilelxnisuvadavxya rUpaniravanAM baNiNxsuvo\-DaLave eMdaM ipapxtatxneya tatatxvXveV pArxNavAyuvAgipupxdadane deYvaveMbarA yoVgigaLu ipapxtotxMdaneya tatatxvXvadu jiVvAtamxnu (viVsheYpu. 3-28-34).}}
-\vskip 2pt
+\vskip 5pt
 \newmeaning{\ni{jiVvashacx asw AtAmx ca - jiVvAtAmx}}
 %yAvAgalU saMsAradalilxyeV toLalADutitxrutAtxne. jiVvAtamxna parxgati eMdare sUthxlashariVradalilx saMbaMdhisida iSaTxliMgavu parxkaTagoLuLxvudeV Agirutatxde:
 %koluvaneV mAdiga, holasu tiMbavaneV holeya... sakalajiVvAtamxrige leVsane bayasuva.. (savasaM. 1; basava. 591-148); eraDu neVtarx oMdAda BALaneVtarxvu iSaTxliMgada goVLakakex... A jiVvAtamxpadAthaRvu liMgakekx salalxdu.. (savasaM. 2; alalxma. 915-296); jaladalilx huTiTxda kesaru kiSxVradalilx toLedare hoVhude.. jiVvAtAmx paramAtAmx ceVnumxkAtxnAM paramAgatiH.. (savasaM. 3; cenanxba. 524-162); Atamxna arivu jiVva BAvaveMbudu adeVtara kUTasathx... jiVvAtamx BAvAtamx paramAtamxneMdalilx.. (savasaM. 8; mAdhAdhU. 1184-415); Adi anAdigaLilalxdaMdu... jiVvAtamx paramAtamxreMbavarilalxdaMdu.. (savasaM. 11; toVMTasi. ???-???);
@@ -28590,8 +28581,8 @@ aMgarUpoV hi jiVvAtAmx BavaBAvaniyaMtirxtaH |
 \begin{entry}
 \word{jiVvAtamxsathxla}
 \meaning{\arthanonum{= jiVvAtamx:}
-\ullekha{jiVvAtamxsathxla, aMtarAtamxsathxla, para\-mAtamxsathxla, nideRVhAgamasathxla, niBARvAgamasathxla, naSATx\-gamasathxla, AdiparxsAdisathxla, aMtayxparxsAdisathxla, seVvayxparxsAdisathxla, diVkASxpAdoVdakasathxla, shikASxpAdoVdakasathxla, jAcnxnapAdoVdaka\-sathxla I hanenxraDu jaMgamaliMgasathxlaMgaLu (savasaM. 14; SaNumxKa. 780-355); iMtu tanuguNaliMga tirxvidhaveVkavAda liMgaM pArxNaliMgiyalilx jiVvaBAvanivaqtitxyaM mADi liMga\-sajijxVva samayxkatxvXvaM paDeda BeVdaveMtidiRtetxMdoDe muMde jiVvAtamxsathxlavAdudu (keYvasha. 124-1 sUtarxM).}}
-\vskip 2pt
+\ullekha{jiVvAtamxsathxla, aMtarAtamxsathxla, paramAtamx\-sathxla, nideRVhAgamasathxla, niBARvAgamasathxla, naSATxgama\-sathxla, AdiparxsAdisathxla, aMtayxparxsAdisathxla, seVvayxparxsAdisathxla, diVkASxpAdoVdakasathxla, shikASxpAdoVdakasathxla, jAcnxnapAdoVdaka\-sathxla I hanenxraDu jaMgamaliMgasathxlaMgaLu (savasaM. 14; SaNumxKa. 780-355); iMtu tanuguNaliMga tirxvidhaveVkavAda liMgaM pArxNaliMgiyalilx jiVvaBAvanivaqtitxyaM mADi liMga\-sajijxVva samayxkatxvXvaM paDeda BeVdaveMtidiRtetxMdoDe muMde jiVvAtamxsathxlavAdudu (keYvasha. 124-1 sUtarxM).}}
+\vskip 5pt
 \newmeaning{\ni{jiVvAtamxnaH sathxlaM jiVvAtamxsathxlaM; jiVvAtAmx iti sathxlaM - jiVvAtamxsathxlaM}}
 \end{entry}
 
@@ -28612,7 +28603,7 @@ tathAtamxni parxkAsheV tu jAcnxnaM jecnxVyaM nivataRteV ||
 \medskip
 \pauthor{(si.shi., 19. 44-45)}
 \newmeaning{\ullekha{jAcnxtaq jAcnxna jecnxVyakekx inAnxva jAcnxnavo? (savasaM. 2; alalxma. 652-175); ahaMkAra mamakAravilalxde, jAcnxtaq jAcnxna jecnxVya\-veMba tirxpuTiya miVri,... mahAliMgadalilx liVyavAdude liMgeYkayx (savasaM. 3; cenanxba. 1653-604); jAcnxtaq, jAcnxna, jecnxVyaveMbalilx shakitxpuruSatavxkekx sUthxla, sUkaSxmX, kAraNa iMtiV tanu\-tarxyadalilx kAbudoMdu kANisikoMbudoMdu (savasaM. 8; parxsABoV. 24-13).}}
-\vskip 2pt
+\vskip 5pt
 \newmeaning{\ni{jAcnxtuM yoVgayxH - jecnxVyaH}}
 \end{entry}
 %%AdhAra sAvxdidhxSAThxna maNipUraka... vishudidhx AjecnxVyava nuDidaDeVnu.. (savasaM. 5; akakxma. 60-24); 
@@ -28626,6 +28617,8 @@ tathAtamxni parxkAsheV tu jAcnxnaM jecnxVyaM nivataRteV ||
 \end{entry}
 %%kakeSxyalilx liMgava dharisikoMDAta barxhamx... barxhamx pAshupatiyAgi suLida, viSuNx joVgiyAgi suLida.. (savasaM. 3; cenanxba. 1089-369); carAcarAtamxka parxpaMcavelalx... poVtarAja, joVgi, kaSxpaNaraMte.. (savasaM. 5; akakxma. 209-61); veVdavanoVdidavarelalx namamx sharaNaru hoVda hAdiyanariyade... 
 
+\vskip 3pt
+
 \begin{entry}
 \word{joVgiNi}
 \src{kA}
@@ -28633,7 +28626,7 @@ tathAtamxni parxkAsheV tu jAcnxnaM jecnxVyaM nivataRteV ||
 \ullekha{joVgiNiya hiriya lakAkxyi\-yeMbavaLiMde rAgadiM sarasa keVLiyoVLiduR vAdhayxniya keVLudx miTaTxne miDukutaM (parxBupu. 141-291).}}
 \end{entry}
 
-\vskip 2pt
+\vskip 3pt
 
 \begin{entry}
 \word{joVLavALi}
@@ -28642,21 +28635,22 @@ tathAtamxni parxkAsheV tu jAcnxnaM jecnxVyaM nivataRteV ||
 \ullekha{joVLa\-vALiMge bijajxLaMge ALAdaDeVnu? veVLevALiMge kUDi\-koMDipapx kUDalasaMgamadeVva (savasaM. 1; basava. 1113-303); deVva dAnava mAnavarelAlx joVLavALiyaleYdAre (savasaM. 5; akakxma. 285-84); heVLuvaDe nAnAgi, keVLuvaDe niVnAgi. I uBayada sAlumUleyalilx bidudx, joVLavALige OleY\-sida kALubaMTanaMtAde, niHkaLaMka malilxkAjuRnA (savasaM. 8; moVLige. 2229-713); ``joVLavALiyava liMgAMgakekx Binanx\-viTuTx pUjAkirxVgaLa mADuvAta" (basaTiV. {\rm\em{II,}} 106-700 TiVku).}}
 \end{entry}
 
-\vskip 2pt
+\vskip 3pt
 
 \begin{entry}
 \word{joyxVti}
 \meaning{\arthanonum{anuBAviyu tananx boVdhacakuSxviniMda kANuva beLaku, ceYtanAyxtamxka beLaku athavA cidebxLagu:}}
-\smallskip
+\medskip
 \begin{shl}
-joyxVtiHsavxrUpaH parashivaH | yoVgiV AtamxnaH haqdayAkAsheV joyxVtisavxrUpaparashivaMH jAcnxnacakuSxdAvxRrA sAkASxtf karoVti | dAvxdashAMtasithxta paraMjoyxVtiH parashivaH |\\[1pt]
-1. joyxVtisatxdagxtamAnasoV\char'263pi parataH savxdAvxdashAMtasithxtaM |\\[1pt]
-savxcACxBaM sadaqshaparxBaM parashivaM yoVgiV citA pashayxti |
+joyxVtiHsavxrUpaH parashivaH | yoVgiV AtamxnaH haqdayAkAsheV joyxVtisavxrUpaparashivaMH jAcnxnacakuSxdAvxRrA sAkASxtf karoVti | dAvxdashAMtasithxta paraMjoyxVtiH parashivaH |\\[3pt]
+1. joyxVtisatxdagxtamAnasoV\char'263pi parataH savxdAvxdashAMtasithxtaM |\\[2pt]
+savxcACxBaM sadaqshaparxBaM parashivaM yoVgiV citA pashayxti |\\
 \end{shl}
 \medskip
 \pauthor{(si.sA.yoV.sholxV. 6)}
+\smallskip
 \newmeaning{\ullekha{kariyaMjuvudu aMkushakakxyAyx... tamaMdhavaMjuvudu joyxVti\-gayAyx (savasaM. 1; basava. 75-22); joyxVtiyoLagaNa kapURrakekx, apupxvina keYyalipapx upipxMge... (savasaM. 2; alalxma. 62-18).}}
-\vskip 2pt
+\vskip 5pt
 \newmeaning{\ni{duyxtf+isunf - doyxVtateV iti joyxVtiH}}
 \end{entry}
 %%mAtu mANikayxva nuMgi, joyxVti katatxleya nuMgi... sadamalajAcnxnasaMpananx kUDalacenanxsaMgayayxnalilx basavaNaNxMge savxyavAyitutx (savasaM. 3; cenanxba. 1478-540); ayAyx, parAtapxra satayx sadAcAra... aKaMDajoyxVtiparxNava, aKaMDamahAjoyxVtiparxNavava liKitavamADi.. (savasaM. 5; akakxma. 35-11); joyxVti nAlakxroLage AtamxneYdAne (savasaM. 6; aMbiga. 151-51); nirALada aSaTxdaLakamaladolage niraMjana cwkamadhayx noVDA... joyxVtiHparxNava, aKaMDajoyxVtiHparxNava.. (savasaM. 6; uripe. 1421-489); ele mana budidhx citatx ahaMkAraveMba... ajAcnxnatamakekx joyxVtiHparxkAshavanuLaLx.. (savasaM. 11; GanaliM. 709-320); voyxVmaveV aMgavAda sharaNana sujAcnxnahasatxdalilxha... joyxVtiHparaM nijamuKaMDamatiVMdirxyAthaRM.. (savasaM. 13; bAlasaM. 517-242)
@@ -28682,25 +28676,23 @@ savxcACxBaM sadaqshaparxBaM parashivaM yoVgiV citA pashayxti |
 %\newmeaning{\ni{joyxVtimaRyaliMgaM, joyxVtimaRyaM ca tatf liMgaM ca-joyxVtimaRyaliMgaM}}
 %\end{entry}
 
-\vskip 2pt
+\vskip 3pt
 
 \begin{entry}
 \word{joyxVtimaRyAMgaliMga}
 \src{kA}
 \meaning{\arthanonum{ceYtanayxsavxrUpavAda liMga:}
 \ullekha{avanAnobabxnA joyxVtimaRyatavxvane BAvisalf joyxVti\-maRyAMgaliMgavenipapxneY (viVsheYpu. 8-124-9).}}
-\vskip 2pt
+\vskip 5pt
 \newmeaning{\ni{aMgaM ca tatf liMgaM ca athavA aMgaM Eva liMgaM aMgaliMgaM, joyxVtimaRyaM ca tatf aMgaliMgaM ca - joyxVtimaRyAMgaliMgaM}}
 \end{entry}
-
-\vskip 2pt
 
 \begin{entry}
 \word{joyxVtimaRyAkaqti}
 \src{va}
-\meaning{\arthanonum{joyxVtirAkaqti: ceYtanayxsavxrUpavAda liMgAkaqtiH.}
+\meaning{\arthanonum{joyxVtirAkaqti: ceYtanayx\-savxrUpavAda liMgAkaqtiH.}
 \ullekha{tArakAkaqti ...joyxVtimaRyAkaqti, niSakxLAkaqti nirALAkaqti niraMjanAkaqti ivu AkaqtigaLu (savasaM. 3; cenanxba. 1268-441).}}
-\vskip 2pt
+\vskip 5pt
 \newmeaning{\ni{joyxVtimaRyasayx AkaqtiH iva AkaqtiH yasayx saH - joyxVtimaRyAkaqtiH}}
 \end{entry}
 
@@ -28708,7 +28700,7 @@ savxcACxBaM sadaqshaparxBaM parashivaM yoVgiV citA pashayxti |
 \word{joyxVtirAkaqti}
 \meaning{\arthanonum{AdhAra, sAvxdhiSAThxna, maNipUraka, \hbox{anAhata}, vishudidhx matutx AjAcnx eMba SaTacxkarxgaLige anukarxma\-vAgiruva tAraka, daMDaka, kuMDala, adhaRcaMdarx, dapaRNa matutx joyxVtirAkaqti eMba Aru bageya AkAragaLalilx oMdu:}
 \ullekha{ayayx, joyxVtirAkaqti, OMkAra parxNama (savasaM. 10; gurusi. 752-438); sUkaSxmX raMdharxgata parxNavada joyxVtirAkaqtiyAda, guhayx parxNavave[ma]hAliMgamadu, ninanx goVpayx savxrUpamAdu\-dayAyx, parama shivaliMga paripUNaR SaDaMgA (savasaM. 11; imamxDi. 1275-589); joyxVtirAkaqtiya OMkAraparxNavada AjAcnxcakarxdoLu mANikayxvaNaRvipuRdu (savasaM. 13; maDivA. 991-454); joyxVtirAkaqti OMkAraparxNava... gAyatirxveVda iMtiV 16 sakiVlaMgaLu iSaTxliMgada goVLakadalilx saMbaMdha\-vAgihavu (sakiVla {\rm ix} 1).}}
-\vskip 2pt
+\vskip 5pt
 \newmeaning{\ni{joyxVtiSaH Akaqti iva AkaqtiH yasayx saH - joyxVtirAkaqtiH}}
 \end{entry}
 %%cakarxda kaNiRkAmadhayxdalilxpaR OMkAravu A mahAliMgasavxrUpavAda parxNavada joyxVtirAkaqtiyalilx saMbaMdhavAgipuRdu (savasaM. 13; BikaSxda. 922-403); paramAnuBAvajaMgamArAdhanegeMdu... adhaRcaMdArxkaqti, dapaRNAkaqti, joyxVtirAkaqtigaLalilx.. (savasaM. 14; mUrusA. 23-22);
@@ -28741,14 +28733,12 @@ joyxVtiliRMgaM viBAveyxYva tatarx dheyxVyaH paraH shivaH ||
 %\end{shl}
 %\medskip
 %\pauthor{(?-32-295)}
+\smallskip
 \newmeaning{\artha{BarataKaMDadalilx parxsidadhxvAgiruva soVmanAtha (swrASaTxrX), malilxkAjuRna (shirxVsheYla), mahAkAla (ujajxyini), OMkAra (amaleVshavxra), veYdayxnAtha (paraLi), BiVmashaMkara (DAkini), rAmeVshavxra (seVtubaMdha), nAgeVsha (dArukAvana), vishevxVsha (vAraNAsi), tarxyXMbaka (gwtamiVtaTa), keVdAra (himAlaya) matutx GaqSeVNxsha (ilApuri) -eMba dAvxdashasAthxvaraliMgagaLu:}}
 \smallskip
 \begin{shl}
 swrASeTxrXV soVmanAthaM ca shirxVsheYleV malilxkAjuRnamf |\\[1pt]
-ujajxyinAyxM mahAkAlamoVMkAramamaleVshavxramf ||
-\end{shl}
-
-\begin{shl}
+ujajxyinAyxM mahAkAlamoVMkAramamaleVshavxramf ||\\[3pt]
 paralAyxM veYjanAthaM ca DAkinAyxM BiVmashaMkaramf |\\[1pt]
 seVtubaMdheV tu rAmeVshaM nAgeVshaM dArukAvaneV ||\\[3pt]
 vArANasAyxM tu vishevxVshaM tarxyXMbakaM gwtamiVtaTeV |\\[1pt]
@@ -28757,6 +28747,7 @@ EtAni joyxVtiliRMgAni......  |
 \end{shl}
 \smallskip
 \newmeaning{\ullekha{mAteMbudu joyxVtiliRMga, savxraveMbudu paratatavx (savasaM. 2; alalxma. 1463-433); me{\re}va joyxVtiliRMga haqdayakamala\-doLiralf (shivaciM. 32-51).}}
+\vskip 5pt
 \newmeaning{\ni{joyxVtiSaH liMga - joyxVtiliRMgaM}}
 \end{entry}
 %%AdiliMga, anAdi sharaNaneMbudu tapapxdu... ninonxLu toLagi belaguva joyxVtiliMRga.. (savasaM. 3; cenanxba. 988-325); Aturada dhAyxnadiMda dhAvatigoMDe... joyxVtiliMRgava kANisabAradu.. (savasaM. 5; akakxma. 56-20); padAmxsanadalilx kuLiLxduR AdhAramaM. balidu... meVlaNa sahasarxkamalamadhayxdoLipapx joyxVtiliMRgadalilx.. (savasaM. 8; bahurU. 162-66); paMcashakitxyanu paMcasAdAKayxvanu... paraMjoyxVtiliMRgavu enanx pArxNaliMgavayAyx.. (savasaM. 11; toVMTasi. 36-15);
@@ -28772,6 +28763,7 @@ joyxVtiliRMgAnusaMdhAnamAMtaraM liMgadhAraNamf ||
 \end{shl}
 \medskip
 \pauthor{(si.shi., 6. 39)}
+\vskip 5pt
 \newmeaning{\ni{joyxVtiliRMgasayx anusaMdhAnaM - joyxVtiliRMgAnu\-saMdhAnaM}}
 \end{entry}
 
@@ -28810,7 +28802,5 @@ joyxVtiliRMgAnusaMdhAnamAMtaraM liMgadhAraNamf ||
 %\end{shl}
 %\newmeaning{\ni{taMDulaH, taDf+ulacf-taMDulaH}}
 %\end{entry}
-
-
 
 %\end{multicols}
