319 - 336 pages are formated

--- a/tex-for-print/jss-001-281.tex
+++ b/tex-for-print/jss-001-281.tex
@@ -27213,24 +27213,23 @@ guru. Itanige anuBAvaguru eMba matotxMdu hesarU ide:}}
 \medskip
 \begin{shl}
 upadeVSoTxVpadeVshAnAM saMshayaceCxVdakArakaH |\\[2pt]
-samayxgfjAcnxnaparxdaH sAkASxdf ESa jAcnxnaguruH samxqqtaH ||\\[-2pt]
+samayxgfjAcnxnaparxdaH sAkASxdf ESa jAcnxnaguruH samxqqtaH ||\\
 \end{shl}
 \medskip
 \pauthor{(si.shi., 15.21)}
 \smallskip
-\newmeaning{\ullekha{dhAyxnakekx nimamx shirxVmUtiRyeV muKayxvayAyx, pUjege nimamx shirxVpAdaveV muKayxvayAyx, maMtarxkekx nimamx nAmAmaqtaveV muKayx\-vayAyx, mukitxge nimamx GanakaqpeyeV muKayxvayAyx, nimimxMdadhi\-karanAranU kANenayAyx kUDalasaMgamadeVvA, niVvu jAcnxna\-guruvAda kAraNa (savasaM. 1; basava. 1230-339); ayayx! diVkASxguru, shikASxguru, jAcnxnagurugaLeMba tirxvidha guru\-gaLu (savasaM. 2; alalxma. 789-222); malamAyA pAtakasUtakarahitavAda diVkASxguru shikASxguru jAcnxnaguruviniMda mahAmaMtarx kirxyAdiVkeSxya paDedu ...nivaRMcakatavxdiMda Gana\-pAdatiVthaR parxsAdamaMtarxdalilx niMda nijAvasethxya kirxyAcAra\-veMbenayAyx (savasaM. 3; cenanxba. 930-293);
-  A shiSayxna nijadAdiyaneYdisuvaniVga jAcnxnaguru (savasaM. 5; akakxma. 133-42);  bAhayxvaBayxMtaraMgadoLf jAcnxnakirxye biDalilalx\-daMta{\ri}vutAdi madhAyxMtaMgaLeDeya taninxMdatAM sAvxnuBAvade tiLidu naDevaneV jAcnxnaguru (viVsheYpu. 8-124-28); sAma\-rasayxda guTaTxnunx toVrisi jiVvana Bavavanunx kaLedalilx jAcnxnaguruvu (shivAkoV. 69-126).}
+\newmeaning{\ullekha{dhAyxnakekx nimamx shirxVmUtiRyeV muKayxvayAyx, pUjege nimamx shirxVpAdaveV muKayxvayAyx, maMtarxkekx nimamx nAmAmaqtaveV muKayx\-vayAyx, mukitxge nimamx GanakaqpeyeV muKayxvayAyx, nimimxMdadhi\-karanAranU kANenayAyx kUDalasaMgamadeVvA, niVvu jAcnxna\-guruvAda kAraNa (savasaM. 1; basava. 1230-339); ayayx! diVkASxguru, shikASxguru, jAcnxnagurugaLeMba tirxvidha guru\-gaLu (savasaM. 2; alalxma. 789-222); malamAyA pAtakasUtakarahitavAda diVkASxguru shikASxguru jAcnxnaguruviniMda mahAmaMtarx kirxyAdiVkeSxya paDedu ...nivaRMcakatavxdiMda Gana\-pAdatiVthaR parxsAdamaMtarxdalilx niMda nijAvasethxya kirxyAcAra\-veMbenayAyx (savasaM. 3; cenanxba. 930-293);  A shiSayxna nijadAdiyaneYdisuvaniVga jAcnxnaguru (savasaM. 5; akakxma. 133-42);  bAhayxvaBayxMtaraMgadoLf jAcnxnakirxye biDalilalx\-daMta{\ri}vutAdi madhAyxMtaMgaLeDeya taninxMdatAM sAvxnuBAvade tiLidu naDevaneV jAcnxnaguru (viVsheYpu. 8-124-28); sAma\-rasayxda guTaTxnunx toVrisi jiVvana Bavavanunx kaLedalilx jAcnxnaguruvu (shivAkoV. 69-126).}
 \artha{shivAdevxYtashAsatxrXdalilx heVLida BeVdarahitavU, vikArarahitavU Ada cidAkAshatatatxvXsavxrUpiyAda paramAtamxnanunx yukitxyiMda sAkASxtakxrisikoLuLxva guru:}}
 %%elalxra diVkeSxya pariyaMtalalx emamxyayxna diVkeSx... kUDalacenanxsaMgayayxneMba jAcnxnaguru.. (savasaM. 3; cenanxba. 1058-355);
 %ayayx! acacxparxsAdi, nicacxparxsAdi... satikxrXVyAguruliMgajaMgamavane jAcnxnaguruliMgajaMgamaveMdu BAvisi.. (savasaM. 6; aMbiga. 32-12);
-\medskip
+\smallskip
 \begin{shl}
-nirasatxvishavxsaMBeVdaM niviRkAraM cidaMbaramf |\\[2pt]
-sAkASxtakxroVti yoV yukAtxyX sa jAcnxnagururucayxteV ||\\
+nirasatxvishavxsaMBeVdaM niviRkAraM cidaMbaramf |\\[1pt]
+sAkASxtakxroVti yoV yukAtxyX sa jAcnxnagururucayxteV ||\\[-2pt]
 \end{shl}
 \medskip
 \pauthor{(si.shi., 15. 22)}
-\vskip 5pt
+\vskip 3pt
 \newmeaning{\ni{jAcnxnaboVdhakaH guruH - jAcnxnaguruH}}
 \end{entry}
 
