all pages are formated and remaining pages are sent to another proof

--- a/tex-for-print/anubandha-3.tex
+++ b/tex-for-print/anubandha-3.tex
@@ -195,7 +195,7 @@ ha.koV. \> halAyudhakoVshaH
 
 
 {\renewcommand{\arraystretch}{1.3}
-\begin{longtable}{rp{6cm}cp{9cm}<{\raggedright}}
+\begin{longtable}{rp{6cm}cp{9cm}<{\raggedright}@{}}
 \hline
 \endfirsthead
 \hline
@@ -325,16 +325,19 @@ ha.koV. \> halAyudhakoVshaH
 \end{longtable}}
 
 
-\vskip 1cm
+\vskip 1.2cm
 
 \begin{center}
 {\large\bf (2) vacana garxMthagaLa saMkiSxpatx sUci}
 \end{center}
 
+\medskip
 
 \centerline{\bf ``a''}
 
-{\renewcommand{\arraystretch}{1.3}
+\smallskip
+
+{\renewcommand{\arraystretch}{1.35}
 \begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
 \hline
 \endfirsthead
@@ -365,9 +368,14 @@ ha.koV. \> halAyudhakoVshaH
 \hline
 \end{longtable}}
 
+
+\newpage
+
 \centerline{\bf ``A''}
 
-{\renewcommand{\arraystretch}{1.3}
+\medskip
+
+{\renewcommand{\arraystretch}{1.35}
 \begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
 \hline
 \endfirsthead
@@ -386,7 +394,7 @@ ha.koV. \> halAyudhakoVshaH
 
 \centerline{\bf ``i''}
 
-{\renewcommand{\arraystretch}{1.3}
+{\renewcommand{\arraystretch}{1.35}
 \begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
 \hline
 \endfirsthead
@@ -416,7 +424,7 @@ ha.koV. \> halAyudhakoVshaH
 
 \centerline{\bf ``u''}
 
-{\renewcommand{\arraystretch}{1.3}
+{\renewcommand{\arraystretch}{1.35}
 \begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
 \hline
 \endfirsthead
@@ -436,7 +444,7 @@ ha.koV. \> halAyudhakoVshaH
 
 \centerline{\bf ``e''}
 
-{\renewcommand{\arraystretch}{1.3}
+{\renewcommand{\arraystretch}{1.35}
 \begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
 \hline
 \endfirsthead
@@ -453,7 +461,7 @@ ha.koV. \> halAyudhakoVshaH
 
 \centerline{\bf ``E''}
 
-{\renewcommand{\arraystretch}{1.3}
+{\renewcommand{\arraystretch}{1.35}
 \begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
 \hline
 \endfirsthead
@@ -467,9 +475,11 @@ ha.koV. \> halAyudhakoVshaH
 \hline
 \end{longtable}}
 
+\newpage
+
 \centerline{\bf ``o''}
 
-{\renewcommand{\arraystretch}{1.3}
+{\renewcommand{\arraystretch}{1.35}
 \begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
 \hline
 \endfirsthead
@@ -482,9 +492,11 @@ ha.koV. \> halAyudhakoVshaH
 \hline
 \end{longtable}}
 
+\medskip
+
 \centerline{\bf ``ka''}
 
-{\renewcommand{\arraystretch}{1.3}
+{\renewcommand{\arraystretch}{1.35}
 \begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
 \hline
 \endfirsthead
@@ -516,9 +528,11 @@ ha.koV. \> halAyudhakoVshaH
 \hline
 \end{longtable}}
 
+\medskip
+
 \centerline{\bf ``ga''}
 
-{\renewcommand{\arraystretch}{1.3}
+{\renewcommand{\arraystretch}{1.35}
 \begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
 \hline
 \endfirsthead
@@ -543,9 +557,11 @@ ha.koV. \> halAyudhakoVshaH
 \hline
 \end{longtable}}
 
+\medskip
+
 \centerline{\bf ``Ga''}
 
-{\renewcommand{\arraystretch}{1.3}
+{\renewcommand{\arraystretch}{1.32}
 \begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
 \hline
 \endfirsthead
@@ -559,9 +575,11 @@ ha.koV. \> halAyudhakoVshaH
 \hline
 \end{longtable}}
 
+\smallskip
+
 \centerline{\bf ``ca''}
 
-{\renewcommand{\arraystretch}{1.3}
+{\renewcommand{\arraystretch}{1.32}
 \begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
 \hline
 \endfirsthead
@@ -580,9 +598,11 @@ ha.koV. \> halAyudhakoVshaH
 \hline
 \end{longtable}}
 
+\smallskip
+
 \centerline{\bf ``da''}
 
-{\renewcommand{\arraystretch}{1.3}
+{\renewcommand{\arraystretch}{1.32}
 \begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
 \hline
 \endfirsthead
@@ -598,9 +618,11 @@ ha.koV. \> halAyudhakoVshaH
 \hline
 \end{longtable}}
 
+\smallskip
+
 \centerline{\bf ``na''}
 
-{\renewcommand{\arraystretch}{1.3}
+{\renewcommand{\arraystretch}{1.32}
 \begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
 \hline
 \endfirsthead
@@ -619,7 +641,7 @@ ha.koV. \> halAyudhakoVshaH
 
 \centerline{\bf ``pa''}
 
-{\renewcommand{\arraystretch}{1.3}
+{\renewcommand{\arraystretch}{1.35}
 \begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
 \hline
 \endfirsthead
@@ -634,9 +656,11 @@ ha.koV. \> halAyudhakoVshaH
 \hline
 \end{longtable}}
 
+\smallskip
+
 \centerline{\bf ``ba''}
 
-{\renewcommand{\arraystretch}{1.3}
+{\renewcommand{\arraystretch}{1.35}
 \begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
 \hline
 \endfirsthead
@@ -658,9 +682,11 @@ ha.koV. \> halAyudhakoVshaH
 \hline
 \end{longtable}}
 
+\smallskip
+
 \centerline{\bf ``ma''}
 
-{\renewcommand{\arraystretch}{1.3}
+{\renewcommand{\arraystretch}{1.35}
 \begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
 \hline
 \endfirsthead
@@ -687,6 +713,8 @@ ha.koV. \> halAyudhakoVshaH
 106. & moVLima - savasaM & moVLige mahAdeVviya vacanagaLu & samagarx saMpuTa - 5 & --\\
 \hline
 \end{longtable}}
+
+\medskip
 
 {\renewcommand{\arraystretch}{1.3}
 \begin{longtable}{rl>{\raggedright}p{5.5cm}lc}
@@ -749,7 +777,7 @@ ha.koV. \> halAyudhakoVshaH
 {\large\bf (3) viVrasheYva kAvayxgaLa saMkiSxpatx sUci}
 \end{center}
 
-{\renewcommand{\arraystretch}{1.3}
+{\renewcommand{\arraystretch}{1.35}
 \begin{longtable}{>{\raggedright}p{3.5cm}ll}
 \hline
 \multicolumn{1}{c}{\bf saMkiSxpAtxkaSxra} & \multicolumn{1}{c}{\bf kaqtiya hesaru} & \multicolumn{1}{c}{\bf koTiTxruva saMKeyx}\\
@@ -850,7 +878,7 @@ hiMdasA & hiMdU dashaRnasAra & \\
 {\Large\bf viVrasheYva pAriBASika koVshadalilx udAharisuva garxMthagaLa saMkiSxpatx sUci}
 \end{center}
 
-{\renewcommand{\arraystretch}{1.18}
+{\renewcommand{\arraystretch}{1.05}
 \tabcolsep=3pt
 \begin{longtable}{rllll}
 \hline
@@ -955,19 +983,19 @@ hiMdasA & hiMdU dashaRnasAra & \\
 43. & cenanxsotxV. & cenanxbasaveVshavxradeVvara  & saMpAdaneya  & viVrasheYva adhayxyana saMsethx, gadaga\\
  & & sotxVtarxda vacanagaLu & sidadhxviVraNoNxDeyara saMkalana & \\[6pt]
 44. & cebapu. & cenanxbasavapurANa & virUpAkaSxpaMDita & liMgAyata vidAyxBivaqdidhx saMsethxya\\
-&&&& vAknamxya shAKe, dhAravADa\\[3pt]
+&&&& vAknamxya shAKe, dhAravADa\\[6pt]
 45. & cwDayayx.  & bahurUpi cwDayayxna vacana & bahurUpi cwDayayx & kananxDa matutx saMsakxqqti\\
-   &                  &                             &                      & nideRVshanAlaya, beMgaLUru\\[3pt]
+   &                  &                             &                      & nideRVshanAlaya, beMgaLUru\\[6pt]
 46. & jakakxNa.  & jakakxNaNxyayxna nirALamaMtarxgoVpayx & jakakxNaNxyayx & kananxDa matutx saMsakxqqti\\
-   &                  &                   &                         & nideRVshanAlaya, beMgaLUru\\[3pt]
+   &                  &                   &                         & nideRVshanAlaya, beMgaLUru\\[6pt]
 47. & jeVDadA.  & jeVDara dAsimayayxna vacana & jeVDara dAsimayayx & kananxDa matutx saMsakxqqti\\
-   &                  &                                    &                & nideRVshanAlaya, beMgaLUru\\[3pt]
+   &                  &                                    &                & nideRVshanAlaya, beMgaLUru\\[6pt]
 48. & tururA. & turugAhi rAmaNaNxna vacana & tu\char'273\char'304gAhi rAmaNaNx & kananxDa matutx saMsakxqqti\\
-   &                  &                                    &                & nideRVshanAlaya, beMgaLUru\\[5pt]
+   &                  &                                    &                & nideRVshanAlaya, beMgaLUru\\[6pt]
 49. & toVMTasi. & toVMTada sidadhxliMgashivayoVgigaLa  & toVMTada sidadhxliMga shivayoVgi & kananxDa matutx saMsakxqqti\\
-   &                  & vacanagaLu                         &                   & nideRVshanAlaya, beMgaLUru\\[5pt]
+   &                  & vacanagaLu                         &                   & nideRVshanAlaya, beMgaLUru\\[6pt]
 50. & tirxpuvi. & tirxSaSiTxpurAtana viLAsaM & suraMga & vAgedxVviVvilAsa\\
-&&&& mudarxNAlaya, dAvaNagere\\[5pt]
+&&&& mudarxNAlaya, dAvaNagere\\[6pt]
 51. & diVkASxboV. & diVkASxboVdhe & kereya padamxrasa & kanARTaka vishavxvidAyxlaya, dhAravADa\\[5pt]
 52. & deVshikeVM. & deVshikeVMdarx saMganabasavayayxna  & deVshikeVMdarx saMganabasavayayx & kananxDa matutx saMsakxqqti\\
  & & SaTasxthXla vacana && nideRVshanAlaya, beMgaLUru\\[5pt]
@@ -1023,32 +1051,32 @@ hiMdasA & hiMdU dashaRnasAra & \\
 80. & joVdama. & joVdara mAyaNaNxna vacana & joVdara mAyaNaNx & kananxDa matutx saMsakxqqti\\
    &                  &                                    &                         & nideRVshanAlaya, beMgaLUru\\[7pt]
 81. & mArayayx. & Ayadxkikx mArayayxgaLa vacana & Ayadxkikx mArayayx & kananxDa matutx saMsakxqqti\\
-   &                  &                                    &                         & nideRVshanAlaya, beMgaLUru\\[7pt]
+   &                  &                                    &                         & nideRVshanAlaya, beMgaLUru\\[4pt]
 82. & arimA. & arivina mAritaMdegaLa vacana & arivina mAritaMde & kananxDa matutx saMsakxqqti\\
-   &                  &                                    &                         & nideRVshanAlaya, beMgaLUru\\[7pt]
+   &                  &                                    &                         & nideRVshanAlaya, beMgaLUru\\[4pt]
 83. & mishArxpaRNa & mishArxpaRNa & cananxbasavaNaNxnavaru & kananxDa adhayxyana saMsethx,\\
     & (cananxbasavaNaNxnavara vacanagaLu, & & & dhAravADa\\
-    & kanARTaka vishavxvidAyxlaya) &&&\\[7pt]
+    & kanARTaka vishavxvidAyxlaya) &&&\\[4pt]
 84. & mumamxkA. & mumamxDi kAyeRVMdarxna & mumamxDi kAyeRVMdarx & kananxDa matutx saMsakxqqti\\
-    && veVdasaMjiVvini & & nideRVshanAlaya, beMgaLUru\\[7pt]
+    && veVdasaMjiVvini & & nideRVshanAlaya, beMgaLUru\\[4pt]
 85. & moVLige. & moVLige mArayayxna vacana & moVLige mArayayx & kananxDa matutx saMsakxqqti\\
-    & & & & nideRVshanAlaya, beMgaLUru\\[7pt]
+    & & & & nideRVshanAlaya, beMgaLUru\\[4pt]
 86. & rAjareV. & rAjasheVKara viLAsaM & SaDakaSxradeVva & bi.e.\ koVdaMDarAma bukf Dipo\\
-    &&&&  meYsUru\\[7pt]
+    &&&&  meYsUru\\[4pt]
 87. & amurA. & amuge rAyamamxna vacanagaLu & amuge rAyamamx & kananxDa matutx saMsakxqqti\\
-   &                  &                                    &                         & nideRVshanAlaya, beMgaLUru\\[5pt]
+   &                  &                                    &                         & nideRVshanAlaya, beMgaLUru\\[4pt]
 88. & liMgamamx. & haDapadapapxNaNx puNayxsitxrXV liMgamamxna & liMgamamx & kananxDa matutx saMsakxqqti\\
-   &                  &  boVdheya vacanagaLu      &                         & nideRVshanAlaya, beMgaLUru\\[5pt]
-89. & liMgaliV. & liMgaliVlAvilAsa cAritarx & kalulxmaThada parxBudeVvaru & muruGAmaTha, dhAravADa\\[5pt]
+   &                  &  boVdheya vacanagaLu      &                         & nideRVshanAlaya, beMgaLUru\\[4pt]
+89. & liMgaliV. & liMgaliVlAvilAsa cAritarx & kalulxmaThada parxBudeVvaru & muruGAmaTha, dhAravADa\\[4pt]
 90. & va.pA.koV. & vacanapariBASAkoVsha & esf. vidAyxshaMkara & kananxDa matutx saMsakxqqti\\
-   &                  &                     & (saMpAdakaru)      & nideRVshanAlaya, beMgaLUru\\[5pt]
+   &                  &                     & (saMpAdakaru)      & nideRVshanAlaya, beMgaLUru\\[4pt]
 91. & vacara. & vacanashAsatxrXrahasayx & raM.rA.\ divAkara & adhAyxtamx kAyARlaya\\
-    &&&& hubabxLiLx\\[5pt]
+    &&&& hubabxLiLx\\[4pt]
 92. & vacashA. & vacanashAsatxrXsAra & Pa.gu.\ haLakaTi & shivAnuBava garxMthamAlA,\\
-   &                  &                                    & (saMpAdakaru)  & vijApura\\[5pt]
+   &                  &                                    & (saMpAdakaru)  & vijApura\\[4pt]
 93. & viveVka. & viveVkaciMtAmaNi & nijaguNa shivayoVgi & shirxV jagadugxru gaMgAdhara\\
     &&&& dhamaR parxcAraka maMDala\\
-    &&&& mUrusAvira maTha, hubabxLiLx\\[5pt]
+    &&&& mUrusAvira maTha, hubabxLiLx\\[4pt]
 94. & viVsheYpu. & viVrasheYvAmaqtapurANa & gubibx malalxNAyaR & enf.esf.esf.\ kalAyxNakeVMdarx\\
     &&&& beLagAvi\\[5pt]
 95{\rm a}. & veYdayxsaM. & veYdayx saMgaNaNxna vacana & veYdayx saMgaNaNx & kananxDa matutx saMsakxqqti\\
@@ -1076,41 +1104,41 @@ hiMdasA & hiMdU dashaRnasAra & \\
 106. & SabarxsaM. va & SaTasxthXlabarxhAmxnaMda virakatxcAritarx & esf.\ umApati & viVrasheYva adhayxyana saMsethx, gadaga\\
     & saMpAdaneya vacanagaLu && (saMpAdakaru) & \\[6pt]
 107. & dAsoVhaM.  & dAsoVhada saMgaNaNxna vacana & dAsoVhada saMgaNaNx & kananxDa matutx saMsakxqqti\\
-   &          &                         &                         & nideRVshanAlaya, beMgaLUru\\[6pt]
+   &          &                         &                         & nideRVshanAlaya, beMgaLUru\\[7pt]
 108. & BikaSxsaM. & BikaSxda saMgayayxna vacana & saMgayayx & kananxDa matutx saMsakxqqti\\
-   &          &                         &                         & nideRVshanAlaya, beMgaLUru\\[6pt]
+   &          &                         &                         & nideRVshanAlaya, beMgaLUru\\[7pt]
 109. & sakaLeV. & sakaLeVsha mAdarasana vacana & mAdarasa & kananxDa matutx saMsakxqqti\\
-   &          &                         &                         & nideRVshanAlaya, beMgaLUru\\[6pt]
+   &          &                         &                         & nideRVshanAlaya, beMgaLUru\\[7pt]
 110. & sakiVla (cananxbasavaNaNx & toMbatAtxru\ sakiVlagaLu & cananxbasavaNaNx & kananxDa adhayxyana saMsethx\\
      & -navara vacanagaLu, & & & dhAravADa\\
-     & kanARTaka vishavxvidAyxlaya) &&&\\[5pt]
+     & kanARTaka vishavxvidAyxlaya) &&&\\[7pt]
 111. & sagabo. & sagarada bomamxNaNxna vacana & bomamxNaNx & kananxDa matutx saMsakxqqti\\
-   &          &                         &                         & nideRVshanAlaya, beMgaLUru\\[5pt]
+   &          &                         &                         & nideRVshanAlaya, beMgaLUru\\[7pt]
 112. & savaRjacnx & savaRjacnxna vacanagaLu & savaRjacnx & ke.i.\ mishanf heYsUkxlf\\
-     &&&& dhAravADa\\[5pt]
+     &&&& dhAravADa\\[7pt]
 113. & savaRva. & savaRpurAtanara vacana & cananxmalilxkAjuRna & sadadhxmaRdiVpike garxMthamAlA\\
-     & & & (saMpAdakaru) & meYsUru\\[5pt]
+     & & & (saMpAdakaru) & meYsUru\\[7pt]
 114. & sAnaMca. & sAnaMda cariterx & kumAra padamxrasa & OriyaMTalf risacfR infsxTiTUyxTf\\
- &&&& meYsUru\\[5pt]
+ &&&& meYsUru\\[7pt]
 115. & sidadhxrA. ka. & shirxV sidadhxrAmeVshavxra vacanagaLu & Arf.si.\ hireVmaTha & kanARTaka vishavxvidAyxlaya\\
-     &&& (saMpAdakaru) & dhAravADa\\[5pt]
+     &&& (saMpAdakaru) & dhAravADa\\[7pt]
 116. & sidadhxrA.  & sidadhxrAmeVshavxra vacanasaMpuTa & sidadhxrAmeVshavxra & kananxDa matutx saMsakxqqti\\
-   &          &                         &                         & nideRVshanAlaya, beMgaLUru\\[5pt]
+   &          &                         &                         & nideRVshanAlaya, beMgaLUru\\[7pt]
 117. & sidedhxVva. & sidedhxVshavxra vacana & sidadhxliMgasAvxmi & shivaliMgavijaya mudArxlaya\\
-    &&&& hAveVri\\[5pt]
+    &&&& hAveVri\\[7pt]
 118. & soDaDxbA. & soDaDxLa bAcarasana vacana & bAcarasa & kananxDa matutx saMsakxqqti\\
-   &          &                         &                         & nideRVshanAlaya, beMgaLUru\\[5pt]
+   &          &                         &                         & nideRVshanAlaya, beMgaLUru\\[7pt]
 119. & soVmaNaNx. & koTArada soVmaNaNxna vacana & koTArada soVmaNaNx & kananxDa matutx saMsakxqqti\\
-   &          &                         &                         & nideRVshanAlaya, beMgaLUru\\[5pt]
+   &          &                         &                         & nideRVshanAlaya, beMgaLUru\\[7pt]
 120. & savxrUpa. & savxrUpasididhxTiVke & nijaguNa shivayoVgi & kananxDa matutx saMsakxqqti\\
-   &          &                         &                         & nideRVshanAlaya, beMgaLUru\\[5pt]
+   &          &                         &                         & nideRVshanAlaya, beMgaLUru\\[7pt]
 121. & savxtaMtarx. & savxtaMtarx sidadhxliMgeVshavxrara vacanagaLu & savxtaMtarx sidadhxliMgeVshavxraru & kananxDa matutx saMsakxqqti\\
-   &          &                         &                         & nideRVshanAlaya, beMgaLUru\\[5pt]
+   &          &                         &                         & nideRVshanAlaya, beMgaLUru\\[7pt]
 122. & hiMdasA. & hiMdU dashaRnasAra & lakiSxmXpuraM shirxVnivAsAcAyaR & meYsUru vishavxvidAyxnilaya\\
-     &&&& meYsUru\\[5pt]
+     &&&& meYsUru\\[7pt]
 123. & hirimaM. & hiriya maMtarxgoVpayx & cananxbasavaNaNx & kananxDa adhayxyana saMsethx\\
      & (cananxbasavaNaNxnavara &&& dhAravADa\\
      & vacanagaLu, kanARTaka &&&\\
-     & vishavxvidAyxlaya) &&&\\[5pt]
+     & vishavxvidAyxlaya) &&&\\[7pt]
 \end{longtable}}
 \end{landscape}
